style: :art: Fixed fat hamburger icon & alignment issues of dropdown navbar
fixed the big fat hamburger only on home section(other places it is working fine)  & done some style changes in ul section of navbar and made it perfectly aligned

--- a/apps/table.css
+++ b/apps/table.css
@@ -71,9 +71,7 @@ nav li{
 	transition: background 0.5s;
 	border-radius: 3px;
 }
-nav li:not(:first-child){
-	margin-left: 0.3em !important;
-}
+		
 nav li:not(.active):hover{
 	background: white;
 }
